# threadmaxx

./: .gitignore  ADAPTIVE_TUNING.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_ARCHIVE.md  CMakeLists.txt  COMPLETE_BEGINNERS.md  Doxyfile  FUTURE_WORK.md  GAME_EXTENSION.md  OPTIMIZATION_PATH.md  README.md  SHARDED_OPTIMISATION.md  rpg_first_person_input_system_spec.md  threadmaxx_adaptive_runtime_tuning.md  threadmaxx_core_future_optimization_notes.md  threadmaxx_sharded_commit_path_optimization_plan.md
bench/: CMakeLists.txt  README.md  adaptive_tuning_bench.cpp  animation_crowd_bench.cpp  audio_crowd_bench.cpp  chunk_iter_bench.cpp  commit_bench.cpp  commit_pass_breakdown.cpp  commit_path_bench.cpp  common.hpp  cull_bench.cpp  event_channel_bench.cpp  foreach_bench.cpp  grain_sweep.cpp  hierarchy_bench.cpp  input_crowd_bench.cpp  job_stealing_bench.cpp  migration_bench.cpp  navmesh_batch_bench.cpp  pack_instances_bench.cpp  particle_storm_bench.cpp  physics_jolt_bench.cpp  profile_report.md  resource_handle_bench.cpp  rpg_stress_bench.cpp  rpg_stress_probe.cpp  rpg_systems.hpp  scene_workloads.hpp  simd_kernels.cpp  studio_overhead.cpp  terrain_query_bench.cpp  ui_crowd_bench.cpp  wave_dispatch_bench.cpp
examples/assets_demo/: CMakeLists.txt  main.cpp
examples/audio_demo/: CMakeLists.txt  main.cpp
examples/boids/: BoidsConfig.hpp  BoidsGame.cpp  BoidsGame.hpp  BoidsSystem.cpp  BoidsSystem.hpp  CMakeLists.txt  MoveSystem.cpp  MoveSystem.hpp  SDLRenderer.cpp  SDLRenderer.hpp  main.cpp
examples/editor_demo/: CMakeLists.txt  main.cpp
examples/input_demo/: CMakeLists.txt  main.cpp
examples/minimal/: CMakeLists.txt  ConsoleRenderer.cpp  ConsoleRenderer.hpp  MovementSystem.cpp  MovementSystem.hpp  MyGame.cpp  MyGame.hpp  SpawnerSystem.cpp  SpawnerSystem.hpp  main.cpp
examples/navmesh_bake/: CMakeLists.txt  main.cpp
examples/physics_demo/: CMakeLists.txt  main.cpp
examples/reflect_demo/: CMakeLists.txt  main.cpp
examples/rpg_demo/: AnimationSystem.cpp  AnimationSystem.hpp  BlockEditSystem.cpp  BlockEditSystem.hpp  CMakeLists.txt  CameraSystem.cpp  CameraSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  CubeRenderSystem.cpp  CubeRenderSystem.hpp  DamageSystem.cpp  DamageSystem.hpp  DayNightSystem.cpp  DayNightSystem.hpp  DebugOverlaySystem.cpp  DebugOverlaySystem.hpp  DemoGame.cpp  DemoGame.hpp  DemoTypes.hpp  HealthBarSystem.cpp  HealthBarSystem.hpp  Heightmap.hpp  HudSystem.cpp  HudSystem.hpp  Input.cpp  Input.hpp  MovementSystem.cpp  MovementSystem.hpp  NPCBrainSystem.cpp  NPCBrainSystem.hpp  ObjLoader.cpp  ObjLoader.hpp  ParallelDispatch.hpp  ParticleEmitterSystem.cpp  ParticleEmitterSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PickupSystem.cpp  PickupSystem.hpp  (+20 more)
examples/studio_demo/: CMakeLists.txt  main.cpp
examples/tou2d/: AudioSystem.cpp  AudioSystem.hpp  BotControlSystem.cpp  BotControlSystem.hpp  BulletHomingSystem.cpp  BulletHomingSystem.hpp  BulletShipCollisionSystem.cpp  BulletShipCollisionSystem.hpp  BulletTerrainSystem.cpp  BulletTerrainSystem.hpp  CHANGELOG.md  CMakeLists.txt  CameraSystem.cpp  CameraSystem.hpp  DebugOverlaySystem.cpp  DebugOverlaySystem.hpp  DemoTypes.hpp  HudSystem.cpp  HudSystem.hpp  InputSystem.cpp  InputSystem.hpp  LevConfig.hpp  LevelEnumerator.hpp  LevelLoader.cpp  LevelLoader.hpp  MatchSetup.hpp  MovementSystem.cpp  MovementSystem.hpp  PalCol.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ProceduralLevel.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp  README.md  RepairKitSystem.cpp  RepairKitSystem.hpp  RepairPickupSystem.cpp  RepairPickupSystem.hpp  Replay.cpp  (+27 more)
examples/ui_demo/: CMakeLists.txt  main.cpp
examples/vulkan_renderer/: CMakeLists.txt
src/threadmaxx_animation/: Animator.cpp  Batch.cpp  CMakeLists.txt  GraphEval.cpp  IK.cpp  Registry.cpp  Retarget.cpp  Warp.cpp
src/threadmaxx_assets/: AsyncLoader.cpp  Bundle.cpp  CMakeLists.txt  Io.cpp  Registry.cpp  Watch.cpp
src/threadmaxx_audio/: AudioMixer.cpp  CMakeLists.txt  VoiceAllocator.cpp
src/threadmaxx_editor/: CMakeLists.txt  CommandStack.cpp  Console.cpp  EditorSession.cpp  Gizmo.cpp  Hierarchy.cpp  HotReloadController.cpp  Inspector.cpp  Layout.cpp  Profiler.cpp  PropertyEditor.cpp  Replay.cpp  SelectionState.cpp  TelemetryOverlay.cpp  WorldDiff.cpp
src/threadmaxx_input/: Binding.cpp  CMakeLists.txt  InputContext.cpp  Picking.cpp  Trace.cpp  UiBridge.cpp
src/threadmaxx_migration/: CMakeLists.txt  ComponentMigrationBridge.cpp  FieldHelpers.cpp  MigrationPipeline.cpp  MigrationRegistry.cpp  RecordIo.cpp  Validation.cpp  WorldSnapshotMigrator.cpp
src/threadmaxx_navmesh/: BakeTool.cpp  BatchPathSolver.cpp  CMakeLists.txt  NavMeshRegistry.cpp  ObstacleOverlay.cpp  PathQueryService.cpp  Solver.cpp
src/threadmaxx_network/: CMakeLists.txt  Delta.cpp  Init.cpp  InterestManager.cpp  Reconciler.cpp  ReplicationRegistry.cpp  RollbackBuffer.cpp  Session.cpp  Snapshot.cpp  SyncTracker.cpp  Transport.cpp  UdpTransport.cpp
src/threadmaxx_physics/: BackendDefaults.cpp  (+2 more)
tests/: CMakeLists.txt  COVERAGE_AUDIT.md  Check.hpp  acceleration_test.cpp  adaptive_determinism_test.cpp  adaptive_grain_convergence_test.cpp  adaptive_no_oscillation_test.cpp  alpha_test.cpp  archetype_hash_determinism_test.cpp  archetype_signatures_test.cpp  archetype_storage_stress_test.cpp  asset_reload_test.cpp  async_snapshot_test.cpp  build_render_frame_seconds_test.cpp  build_render_frame_timing_test.cpp  bundle_test.cpp  cancellation_test.cpp  chrome_trace_test.cpp  command_buffer_routing_test.cpp  command_buffer_spawn_n_test.cpp  command_buffer_test.cpp  commit_hash_test.cpp  commit_soak_test.cpp  component_mask_test.cpp  component_transition_test.cpp  concurrency_soak_long.cpp  concurrency_soak_test.cpp  debug_camera_mask_test.cpp  debug_text_owning_test.cpp  determinism_golden_test.cpp  determinism_test.cpp  engine_user_component_lookup_test.cpp  entity_storage_test.cpp  event_callback_reemit_test.cpp  event_channel_cache_test.cpp  event_channel_lockfree_test.cpp  event_channel_test.cpp  event_subscribe_test.cpp  file_trace_sink_rotation_test.cpp  for_each_serial_test.cpp  (+106 more)
(+1070 files in other folders)
